test/e2e/valid/bufassign_index.mylang
{
    buffer my_buffer <int32, 5> = [];
    my_buffer[0] = 42;
}
