test/e2e/invalid/bufwrite_wrong_type.mylang
{
    buffer my_buffer <int32, 5> = [];
    bufwrite(my_buffer, true);
}
